--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-[submodule "JSON"]
-	path = JSON
-	url = https://github.com/Jacob-C-Smith/JSON
-
+[submodule "json"]
+	path = json
+	url = https://github.com/Jacob-C-Smith/json
