--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,40 +3,30 @@ cmake_minimum_required (VERSION 3.8)
 project ("ui")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
-find_package(SDL2 REQUIRED)
+set(CMAKE_PREFIX_PATH ${CMAKE_SOURCE_DIR}/extern/)
+
+find_package(SDL2 REQUIRED CONFIG REQUIRED COMPONENTS SDL2)
+find_package(SDL2 REQUIRED CONFIG COMPONENTS SDL2main)
 find_package(SDL2_image REQUIRED)
 
-add_subdirectory(${PROJECT_SOURCE_DIR}/JSON)
+add_subdirectory(${PROJECT_SOURCE_DIR}/json)
 find_library(dict NAMES dict HINTS ${PROJECT_SOURCE_DIR}/dict/build/Debug/*)
-
-find_library(json NAMES json HINTS ${PROJECT_SOURCE_DIR}/JSON/build/Debug/*)
+find_library(array NAMES array HINTS ${PROJECT_SOURCE_DIR}/array/build/Debug/*)
+find_library(json NAMES json HINTS ${PROJECT_SOURCE_DIR}/json/build/Debug/*)
 
 include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
 
-if(dict)
-  message("Found dict")
-else()
-  message("${PROJECT_SOURCE_DIR}/JSON/build/Debug/")
-endif()
-
 # Add source to this project's executable.
-add_executable (ui_example "UI.c" "UIButton.c" "UICheckbox.c" "UIDropdown.c" "UIElement.c" "UIImage.c" "UILabel.c" "UIRadioButton.c" "UISlider.c" "UITable.c" "UITextInput.c" "UIWindow.c" "main.c")
+add_executable (ui_example "UI.c" "UIWindow.c" "UIElement.c" "UILabel.c" "main.c") #  "UIButton.c" "UIImage.c" "UICheckbox.c" "UIDropdown.c" "UIElement.c" "UIImage.c" "UILabel.c" "UIRadioButton.c" "UISlider.c" "UITable.c" "UITextInput.c" 
 
 # Add source to this project's library
-add_library    (ui SHARED "UI.c" "UIButton.c" "UICheckbox.c" "UIDropdown.c" "UIElement.c" "UIImage.c" "UILabel.c" "UIRadioButton.c" "UISlider.c" "UITable.c" "UITextInput.c" "UIWindow.c")
+add_library    (ui SHARED "UI.c" "UIWindow.c" "UIElement.c" "UILabel.c") #  "UIButton.c" "UICheckbox.c" "UIImage.c"  "UIDropdown.c" "UIElement.c" "UIImage.c" "UILabel.c" "UIRadioButton.c" "UISlider.c" "UITable.c" "UITextInput.c" 
 
-target_link_libraries(ui_example PUBLIC json dict ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
-target_link_libraries(ui PUBLIC json dict ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
+target_link_libraries(ui_example PUBLIC json array dict ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
+target_link_libraries(ui PUBLIC json array dict ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
 target_link_libraries(ui_example PRIVATE SDL2_image::SDL2_image)
 target_link_libraries(ui PRIVATE SDL2_image::SDL2_image)
 
 # Define targets
-target_include_directories(ui_example PUBLIC "include/" "JSON/include")
-target_include_directories(ui PUBLIC "include/" "JSON/include")
-
-
-if (CMAKE_VERSION VERSION_GREATER 3.12)
-  set_property(TARGET json PROPERTY CXX_STANDARD 20)
-endif()
-
-# TODO: Add tests and install targets if needed.
+target_include_directories(ui_example PUBLIC "include/" "json/include/")
+target_include_directories(ui PUBLIC "include/" "json/include/")
