--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_PREFIX_PATH ${CMAKE_SOURCE_DIR}/extern/)
 
 find_package(SDL2 REQUIRED CONFIG REQUIRED COMPONENTS SDL2)
 find_package(SDL2 REQUIRED CONFIG COMPONENTS SDL2main)
-find_package(SDL2_image REQUIRED)
+find_package(SDL2_image REQUIRED CONFIG REQUIRED COMPONENTS SDL2_image)
 
 add_subdirectory(${PROJECT_SOURCE_DIR}/json)
 find_library(dict NAMES dict HINTS ${PROJECT_SOURCE_DIR}/dict/build/Debug/*)
@@ -17,10 +17,10 @@ find_library(json NAMES json HINTS ${PROJECT_SOURCE_DIR}/json/build/Debug/*)
 include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
 
 # Add source to this project's executable.
-add_executable (ui_example "UI.c" "UIWindow.c" "UIElement.c" "UILabel.c" "main.c") #  "UIButton.c" "UIImage.c" "UICheckbox.c" "UIDropdown.c" "UIElement.c" "UIImage.c" "UILabel.c" "UIRadioButton.c" "UISlider.c" "UITable.c" "UITextInput.c" 
+add_executable (ui_example "UI.c" "UIWindow.c" "UIButton.c" "UIImage.c" "UICheckbox.c" "UIDropdown.c" "UIElement.c" "UIRadioButton.c" "UILabel.c" "UISlider.c" "UITable.c" "UITextInput.c" "main.c") #     
 
 # Add source to this project's library
-add_library    (ui SHARED "UI.c" "UIWindow.c" "UIElement.c" "UILabel.c") #  "UIButton.c" "UICheckbox.c" "UIImage.c"  "UIDropdown.c" "UIElement.c" "UIImage.c" "UILabel.c" "UIRadioButton.c" "UISlider.c" "UITable.c" "UITextInput.c" 
+add_library    (ui SHARED "UI.c" "UIWindow.c" "UIButton.c" "UIImage.c" "UICheckbox.c" "UIDropdown.c" "UIElement.c" "UIRadioButton.c" "UILabel.c" "UISlider.c" "UITextInput.c" "UITable.c") #      
 
 target_link_libraries(ui_example PUBLIC json array dict ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
 target_link_libraries(ui PUBLIC json array dict ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
