--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -22,6 +22,11 @@ jobs:
       with:
         submodules: recursive
 
+    - name: Install Dependencies
+      run:
+        sudo apt-get update
+        sudo apt-get install libsdl2-dev libsdl2-image-dev
+
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
