--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -23,7 +23,7 @@ jobs:
         submodules: recursive
 
     - name: Install Dependencies
-      run:
+      run: |
         sudo apt-get update
         sudo apt-get install libsdl2-dev libsdl2-image-dev
 
