--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -46,4 +46,5 @@ jobs:
         ${{github.workspace}}/build/dict_test
         ${{github.workspace}}/build/array_test
         ${{github.workspace}}/build/json_test
+        cmake --version
         
